Create apha prototype of SemanticAnalyzer v3